fix: background-attachment not working on iphone

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,12 +19,30 @@ body {
   min-height: 100vh;
   min-height: fill-available;
   min-height: -webkit-fill-available;
+  color: #fff;
+}
+
+.bg {
+  width: 100%;
+  height: 100%;
   padding: 1.5rem;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/bg-image-daytime-mobile.jpg);
-  background-attachment: fixed;
-  background-size: contain;
   background-repeat: no-repeat;
-  color: #fff;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: -1;
+}
+
+@supports (-webkit-touch-callout: none) {
+  .bg {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url(../images/bg-image-daytime-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+  }
 }
 
 .header {
